<resources>
    <string name="app_name">Crocodile</string>
    <string name="crocodile">крокодил</string>
    <string name="new_game">новая игра</string>
    <string name="continue_game">продолжить</string>
    <string name="regulations">правила</string>
    <string name="commands">команды</string>
    <string name="plus">+</string>
    <string name="next">далее</string>
    <string name="rules">правила</string>
    <string name="main_string">Командная игра, основной целью которой является объяснение слов</string>
    <string name="first_rule">Задачей каждого игрока является объяснение как можно большего количества слов своим товарищам по команде.</string>
    <string name="second_rule">Во время объяснения нельзя произносить слова и звуки, показывать отдельные буквы или слово по слогам или по частям.</string>
    <string name="third_rule">Во время объяснения можно объяснять слово любыми жестами и позами.</string>
    <string name="fourth_rule">Отгаданное слово приносит команде одно очко, а за пропущенное слово команда штрафуется.</string>
    <string name="fifth_rule">Победителем считается команда, у которой количество слов достигло установленного значения. Раунды проходят пока не определен победитель.</string>
    <string name="options">параметры</string>
    <string name="play">играть</string>
    <string name="score">счет</string>
    <string name="round">раунд 1</string>
    <string name="play_team">играет команда</string>
    <string name="team_name_round">маугли</string>
    <string name="guessed">отгадано</string>
    <string name="missed">пропу\nщено</string>
    <string name="score_team">0 очков</string>
    <string name="menu">меню</string>
    <string name="winner">победитель</string>
    <string name="count">15</string>
    <string name="points">очков</string>
    <string name="team_name">самураи</string>
    <string name="amount_of_points">количество баллов</string>
    <string name="for_victory">для достижения победы</string>
    <string name="round_time">время раунда</string>
    <string name="in_sec">в секундах</string>
    <string name="penalty_for_skip">штраф за пропуск</string>
    <string name="skip_str">пропуск слова отнимает количество очков равное его стоимости</string>
    <string name="sound_game">звук в игре</string>
    <string name="sound_eff_on">включить звуковые эффекты</string>
    <string name="round_label">Раунд</string>
    <string name="cant_continue_game">Игра еще не была начата</string>

    <string name="shared_preferences_key">shared_preferences_key</string>

    <string name="words_to_win_key">words_to_win_key</string>
    <string name="times_for_round_key">times_for_round_key</string>
    <string name="pass_penalty_key">pass_penalty_key</string>
    <string name="current_team_index_key">current_team_index_key</string>
    <string name="round_number_key">round_number_key</string>
    <string name="sp_empty_key">sp_empty_key</string>
    <string name="back_to_main_page_key">back_to_main_page</string>

    <string-array name="teamNames">
        <item>маугли</item>
        <item>самураи</item>
    </string-array>
</resources>