<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/croc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/seymour_one"
            android:gravity="center"
            android:text="@string/crocodile"
            android:textColor="#000000"
            android:textSize="40sp"
            android:layout_marginTop="80dp"
            android:layout_alignParentTop="true"/>

        <ImageView
            android:id="@+id/croc_im"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/crocodile"
            android:layout_below="@+id/croc_label"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:layout_marginHorizontal="60dp"
            android:layout_below="@+id/croc_im"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/seymour_one"
            android:text="@string/new_game"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/continue_game"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:layout_marginHorizontal="60dp"
            android:layout_below="@+id/new_game"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/seymour_one"
            android:text="@string/continue_game"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:layout_marginHorizontal="60dp"
            android:layout_below="@+id/continue_game"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/seymour_one"
            android:text="@string/rules"
            android:textColor="#000000"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>