<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <Button
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:background="@drawable/go_back"
            android:layout_weight="3"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/teams_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/seymour_one"
            android:text="@string/commands"
            android:textColor="#000000"
            android:textSize="35sp"
            android:layout_weight="12"/>

        <TextView
            android:id="@+id/team_fst"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:fontFamily="@font/seymour_one"
            android:text="@string/team_name_round"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_weight="18"/>

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="#64000000"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="0.5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/team_snd"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/seymour_one"
            android:text="@string/team_name"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_weight="50.5"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:fontFamily="@font/seymour_one"
            android:text="@string/next"
            android:textColor="#000000"
            android:layout_weight="8"
            android:padding="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>