<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:layout_weight="1"
            android:elevation="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/croc_im"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/circle"
                android:layout_alignBottom="@+id/circle"
                android:layout_toEndOf="@+id/circle"
                android:layout_marginStart="-50dp"
                app:srcCompat="@drawable/croc" />

            <ImageView
                android:id="@+id/crown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/crown"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/circle"
                android:layout_alignEnd="@+id/circle"/>

            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/circle"
                android:layout_below="@+id/crown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/circle"
                android:layout_alignTop="@+id/circle"
                android:layout_alignEnd="@+id/circle"
                android:layout_alignBottom="@+id/circle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/winner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/scada_italic"
                    android:text="@string/winner"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:layout_weight="5"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/t_name_fst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="@string/team_name_round"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/count_fst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="@string/count"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/points_fst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="@string/points"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_weight="5"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:gravity="top"
                android:layout_gravity="top"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fing_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/fing_down"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/t_name_snd"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="@string/team_name"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_below="@+id/fing_down"/>

                <TextView
                    android:id="@+id/count_snd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="13"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:layout_below="@+id/fing_down"
                    android:layout_alignStart="@+id/points_snd"
                    android:layout_alignEnd="@+id/points_snd"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/points_snd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seymour_one"
                    android:text="@string/points"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:layout_below="@+id/count_snd"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="-15dp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:fontFamily="@font/seymour_one"
                android:layout_marginTop="10dp"
                android:text="@string/menu"
                android:textColor="#000000"
                android:layout_weight="15"
                android:padding="0dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>